Update de README and fixed list overflow

--- a/src/index.css
+++ b/src/index.css
@@ -18,6 +18,9 @@
   background-color: #e5e7e9;
   border-radius: 12px;
   height: 80vh;
+  margin-left: auto;
+  margin-right: auto;
+  max-width: 720px;
   padding-bottom: 15px;
   padding-left: 18px;
   padding-right: 18px;
@@ -33,6 +36,12 @@
 
 .form-control::placeholder {
   color: rgba(234, 237, 237, 0.8);
+}
+
+.list-group {
+  height: 90%;
+  overflow-y: auto;
+  padding-right: 12px;
 }
 
 .list-group-item:last-child,
@@ -51,6 +60,10 @@
   display: flex;
   justify-content: space-between;
   margin-bottom: 12px;
+}
+
+.Products {
+  height: 80%;
 }
 
 .Footer .nav-link {
